tdf#133474 DOC import: fix lazy-loading of images with zero size

DOC typically contains images with a size hint outside the image, but
this is optional. Make sure that we load the image in case the size is
not available without loading.

The effect is that once SwWW8ImplReader::MapWrapIntoFlyFormat() calls
SwGrfNode::GetTwipSize(), we always get a valid size. Ideally without
loading the graphic.

(cherry picked from commit 369355da5c1e25bad7124dd6e187d9e381759751)

Change-Id: I81536ceb44c6e455e9bf274a5852008443f9d64f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95897
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>